--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
   </dependencies>
 
   <build>
-    <finalName>${project.artifactId}</finalName>
+    <finalName>WeCloud</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
