--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>com.scienjus</groupId>
   <artifactId>spring-restful-authorization</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>spring-restful-authorization-demo</name>
   <url>http://maven.apache.org</url>
@@ -20,7 +20,7 @@
   <!--spring-boot默认jdk版本是1.6，手动指定为1.7-->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.7</java.version>
+    <java.version>1.8</java.version>
   </properties>
 
   <!--依赖-->
@@ -40,6 +40,15 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.35</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+      <!--<scope>provided</scope>-->
+    </dependency>
     <!--Redis-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -51,6 +60,7 @@
       <artifactId>swagger-springmvc</artifactId>
       <version>1.0.0</version>
     </dependency>
+
   </dependencies>
 
   <build>
