--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #MySQL≈‰÷√
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo?useUnicode=true&autoReconnect=true&failOverReadOnly=false&zeroDateTimeBehavior=round&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=dtx60pp
 
 #Redis≈‰÷√
 ## Redis ≈‰÷√------------------------------------
